将项目拆分为多模块结构