@@ -12,6 +12,7 @@ import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 /**
  * 指纹管理
@@ -182,10 +183,10 @@ public class FpManager {
                     }
                 }
                 return true;
-            }).toList();
+            }).collect(Collectors.toList());
             // 外层为 or 运算，只要结果不为空，表示规则匹配
             return !fpRulesResult.isEmpty();
-        }).toList();
+        }).collect(Collectors.toList());
         // 如果启用缓存，将指纹识别结果存放在缓存
         if (useCache) {
             sFpTemp.put(tempKey, result);
